# pifp-stellar

./: .gitignore  ARCHITECTURE.md  README.md
backend/indexer/: Cargo.toml
backend/indexer/migrations/: 003_create_profiles_table.sql  005_create_project_stats_table.sql
backend/indexer/src/: api.rs  db.rs  main.rs  profiles.rs  rpc.rs  webhook.rs
backend/oracle/: .env.example  Cargo.toml
backend/oracle/src/: config.rs  health.rs  main.rs  metrics.rs  verifier.rs
contracts/pifp_protocol/src/: errors.rs  events.rs  fuzz_test.rs  invariants_checker.rs  lib.rs  rbac.rs  rbac_test.rs  storage.rs  test.rs  test_deadline.rs  test_donation_count.rs  test_errors.rs  test_events.rs  test_protocol_config.rs  test_refund.rs  test_utils.rs  test_whitelist.rs  types.rs
docs/: contract_api.md
scripts/: .env.backup.example  BACKUP_README.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  backup.sh  restore.sh  setup_cron.sh  test_backup.sh
