[package]
name = "pifp-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Stellar/Soroban
soroban-sdk = "25"
stellar-strkey = "0.0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (health + metrics endpoints)
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

# HTTP client for IPFS
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

# Sentry error tracking
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "0.34"

[dev-dependencies]
mockito = "1"
tower = { version = "0.5", features = ["util"] }
